Edit code done lan 8

--- a/src/main/resources/templates/admin/rank/DetailRank.html
+++ b/src/main/resources/templates/admin/rank/DetailRank.html
@@ -107,8 +107,9 @@
                                            value="Lưu lại"
                                            onclick="updateRankForm()"
                                            class="btn btn-primary">
-                                    <a th:href="@{/mangostore/admin/rank/delete/{id}(id=${detailRank.id})}">
-                                        <button type="button" class="btn btn-danger" onclick="deleteRank()">Xóa
+                                    <a href="javascript:void(0)">
+                                        <button type="button" class="btn btn-danger" onclick="deleteRank()">
+                                            Xóa
                                         </button>
                                     </a>
                                 </div>
