--- a/src/main/resources/templates/admin/voucher/DetailVoucher.html
+++ b/src/main/resources/templates/admin/voucher/DetailVoucher.html
@@ -178,8 +178,9 @@
                                            onclick="updateVoucherForm()"
                                            class="btn btn-primary">
                                     <div class="submitting"></div>
-                                    <a th:href="@{/mangostore/admin/voucher/delete/{id}(id=${detailVoucher.id})}">
-                                        <button type="button" class="btn btn-danger" onclick="removeVoucher()">Xóa
+                                    <a href="javascript:void(0)">
+                                        <button type="button" class="btn btn-danger" onclick="removeVoucher()">
+                                            Xóa
                                         </button>
                                     </a>
                                 </div>
