--- a/src/main/resources/templates/admin/client/DetailClient.html
+++ b/src/main/resources/templates/admin/client/DetailClient.html
@@ -70,11 +70,11 @@
                                         <label class="form-label">Giới tính: </label>
                                         <div class="form-control">
                                             <label>
-                                                <input type="radio" name="gender" value="true"
+                                                <input type="radio" name="gender" value="true" style="width: 21px;"
                                                        th:checked="${detailProfile.gender == true}" th:text="Nam">
                                             </label>&nbsp;
                                             <label>
-                                                <input type="radio" name="gender" value="false"
+                                                <input type="radio" name="gender" value="false" style="width: 21px;"
                                                        th:checked="${detailProfile.gender == false}" th:text="Nữ">
                                             </label>
                                         </div>
@@ -148,7 +148,7 @@
             </div>
             <div class="text-right mt-3">
                 <button type="button" class="btn btn-primary" onclick="updateAccount()">Lưu lại</button>
-                <a th:href="@{/mangostore/admin/list-client/delete/{id}(id=${detailProfile.id})}">
+                <a href="javascript:void(0)">
                     <button type="button" class="btn btn-danger" onclick="deleteClient()">Xóa</button>
                 </a>
             </div>
