--- a/src/main/resources/templates/admin/role/DetailRole.html
+++ b/src/main/resources/templates/admin/role/DetailRole.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="text-right mt-3">
                                 <button type="button" onclick="updateRole()" class="btn btn-primary">Lưu lại</button>&nbsp;
-                                <a th:href="@{/mangostore/admin/role/delete/{id}(id=${detailRole.id})}">
+                                <a href="javascript:void(0)">
                                     <button type="button" class="btn btn-danger" onclick="deleteRole()">Xóa</button>
                                 </a>
                             </div>
